--- a/paper/Process.tex
+++ b/paper/Process.tex
@@ -507,8 +507,8 @@ predicate
 \[
   ((\AgdaFunction{subst~[}~X~\AgdaFunction{/]}~A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}
 \]
-applied to $\Context$. Note that the side condition $X \not\in \fv\Context$ of
-\ForallRule is trivially enforced \emph{by definition}:
+applied to $\Context$. Note that the side condition $X \not\in \fv\Context$
+of\Luca{Da definire} \ForallRule is trivially enforced \emph{by definition}:
 %
 $A$ has type $\AgdaDatatype{PreType}~\AgdaInductiveConstructor{1}$, that is a
 pre-type with \emph{at most one} free type variable $X$, whereas $\Context$ is a
