--- a/paper/main.tex
+++ b/paper/main.tex
@@ -83,7 +83,7 @@
 
 \begin{document}
 
-\title{A Simple Continuation-Based Solution\break of the Linearity Challenge}
+\title{A Continuation-Based Solution\break of the Linearity Challenge}
 
 %%=============================================================%%
 %% GivenName	-> \fnm{Joergen W.}
