--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -1,10 +1,12 @@
 \section{Agda Formalisation}
 \label{sec:agda}
 
-In this section we describe the formalisation of \LCC in Agda. We present in
-detail only some key parts of the code including the representation of types and
-processes, the definition of the operational semantics and the statement of the
-main results. The complete source code is available in \LCC's public repository~\cite{PadovaniRaffaelli25}.
+In this section we describe the formalisation of \LCC in Agda. Each of the
+following sub-sections matches one of the modules of the formalisation. We
+present in detail only some key parts of the code including the representation
+of types and processes, the definition of the operational semantics and the
+statement of the main results. The complete source code is available in \LCC's
+public repository~\cite{PadovaniRaffaelli25}.
 
 \input{Type}
 \input{Context}
