--- a/paper/Context.lagda.tex
+++ b/paper/Context.lagda.tex
@@ -49,7 +49,9 @@ data _≃_+_ : Context → Context → Context → Set where
 When splitting a context $\Context$ into $\ContextD + \ContextE$, for each type
 in $\Context$ we use one of the prefix operators \AgdaInductiveConstructor{<}
 and \AgdaInductiveConstructor{>} to indicate whether the type is meant to be
-placed in $\ContextD$ or in $\ContextE$.
+placed in $\ContextD$ or in $\ContextE$. Once we reach the end of the typing
+context, we use the constructor \AgdaInductiveConstructor{•} to build the
+trivial splitting of the empty context into two empty partitions.
 %
 For example, below is a proof of the splitting $\Splitting{[A, B, C,
 D]}{[B]}{[A, C, D]}$.
@@ -109,17 +111,6 @@ some $\ContextC$ such that $Γ ≃ Δ + Θ$, then we can prove that $Γ_1 + (Γ_
 ... | Δ , r , p′ = Δ , +-comm r , +-comm p′
 \end{code}
 
-% It is often the case that the context $\ContextD$ in a splitting
-% $\Splitting\ContextC\ContextD\ContextE$ is a singleton list $[A]$. We use this
-% particular splitting to describe the presence of a channel of type $A$ in
-% $\ContextC$ and giving a name $\ContextE$ to the residual context. For this
-% particular case, we introduce the dedicated notation
-% $\SimpleSplitting\ContextC{A}\ContextE$ which we find clearer.
-
-% \begin{code}
-% _∋_⊳_ : Context → Type → Context → Set
-% Γ ∋ A ⊳ Δ = Γ ≃ [ A ] + Δ
-% \end{code}
 \begin{code}[hide]
 +-empty-l : ∀{Γ Δ} → Γ ≃ [] + Δ → Γ ≡ Δ
 +-empty-l • = refl
@@ -211,6 +202,10 @@ data Un : Context → Set where
   un-∷   : ∀{A} → ∀[ Un ⇒ (`? A ∷_) ⊢ Un ]
 \end{code}
 
+The empty context is trivially unrestricted. A non-empty context is unrestricted
+if its head has the form $\WhyNot A$ for some $A$ and provided that its tail is
+unrestricted as well.
+%
 It is easy to prove that $\ContextC$ is unrestricted if so are $\ContextD$ and
 $\ContextE$ when $\Splitting\ContextC\ContextD\ContextE$:
 
