--- a/paper/Examples.tex
+++ b/paper/Examples.tex
@@ -161,8 +161,8 @@ For example, we can define a conditional process thus:
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaFunction{≫}\AgdaSymbol{)}%
-\>[103I]\AgdaSymbol{(}\AgdaSpace{}%
-\AgdaInductiveConstructor{wait}\AgdaSpace{}%
+\>[103I]\AgdaSymbol{(}%
+\>[38]\AgdaInductiveConstructor{wait}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ch}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
@@ -171,8 +171,8 @@ For example, we can define a conditional process thus:
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \\
 \>[.][@{}l@{}]\<[103I]%
-\>[35]\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{wait}\AgdaSpace{}%
+\>[35]\AgdaOperator{\AgdaInductiveConstructor{,}}%
+\>[38]\AgdaInductiveConstructor{wait}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ch}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
@@ -401,7 +401,7 @@ We now encode the server
 \\
 \>[0]\AgdaFunction{Server}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[242I]\AgdaFunction{curry}\AgdaSpace{}%
+\>[240I]\AgdaFunction{curry}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaInductiveConstructor{server}\AgdaSpace{}%
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
@@ -410,7 +410,7 @@ We now encode the server
 \AgdaInductiveConstructor{un-[]}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\$}}\<%
 \\
-\>[.][@{}l@{}]\<[242I]%
+\>[.][@{}l@{}]\<[240I]%
 \>[9]\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaInductiveConstructor{all}\AgdaSpace{}%
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
@@ -464,14 +464,14 @@ and the client that sends true to it
 \\
 \>[0]\AgdaFunction{Client}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[287I]\AgdaFunction{curry∗}\AgdaSpace{}%
+\>[285I]\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaInductiveConstructor{client}\AgdaSpace{}%
 \AgdaInductiveConstructor{ch}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaFunction{≫}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\$}}\<%
 \\
-\>[.][@{}l@{}]\<[287I]%
+\>[.][@{}l@{}]\<[285I]%
 \>[9]\AgdaFunction{curry∗}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ex}\AgdaSpace{}%
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
@@ -560,7 +560,7 @@ and then ask Agda to normalize \AgdaFunction{Main}, which yields
 \>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaInductiveConstructor{fork}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[343I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
+\>[341I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
@@ -581,7 +581,7 @@ and then ask Agda to normalize \AgdaFunction{Main}, which yields
 \AgdaBound{Θ}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[343I]%
+\>[.][@{}l@{}]\<[341I]%
 \>[9]\AgdaDatatype{Proc'}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
@@ -624,11 +624,11 @@ and then ask Agda to normalize \AgdaFunction{Main}, which yields
 \>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaInductiveConstructor{fork}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[391I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
+\>[389I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[391I]%
+\>[.][@{}l@{}]\<[389I]%
 \>[9]\AgdaFunction{∀[}\AgdaSpace{}%
 \AgdaDatatype{Ch}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
