--- a/paper/Reduction.tex
+++ b/paper/Reduction.tex
@@ -359,12 +359,12 @@ $\Cut[A]\x{\Link\x\y}{P} \red P\subst\y\x$ called \RLink in
 \AgdaBound{P}\<%
 \end{code}
 
-The splitting $p$ indicates that $y$ (of type $\dual{A}$) occurs on the left
+The splitting $p$ indicates that $y$ (of type $\dual{A}$) occurs in the left
 sub-process of the cut (that is the link $\Link\x\y$) and the splitting
 $\AgdaInductiveConstructor{<}~\AgdaInductiveConstructor{>}~\AgdaInductiveConstructor{•}$
 to which \AgdaInductiveConstructor{link} is applied is structured consistently
-with the syntax of the link $\Link\x\y$ being reduced, which is oriented so that
-the restricted channel $x$ is on the left. 
+with the syntax of the link being reduced, which is oriented so that the
+restricted channel $x$ is on the left. 
 %
 The process $P$ has type
 $\AgdaDatatype{Proc}~(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷}~\ContextD)$
