--- a/paper/related.tex
+++ b/paper/related.tex
@@ -392,9 +392,10 @@ processes reduces the size of the formalisation. As observed in
 \Cref{sec:process-agda}, this choice helps reducing the overall number of
 datatypes to be defined and makes some results trivial (\eg
 \Cref{thm:type-safety} formalised by \AgdaFunction{type-safety}), but the
-definitions are also more involved because they incorporate invariants and the
-proofs of typing preservation. We speculate that the effort for representing
-processes, types and typing rules is not substantially impacted overall.
+definitions are also more involved because they incorporate invariants and bits
+of the proofs of typing preservation. We speculate that the effort for
+representing processes, types and typing rules is not substantially impacted
+overall.
 
 Using the cut in the style of linear logic instead of separate restriction and
 parallel composition simplifies the representation of channels (or session
